---
source: src/codegen/tests/code_gen_tests.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%fbWithConstant = type { i16, i16 }

@__fbWithConstant__init = unnamed_addr constant %fbWithConstant { i16 0, i16 2 }

define void @fbWithConstant(%fbWithConstant* %0) {
entry:
  %this = alloca %fbWithConstant*, align [filtered]
  store %fbWithConstant* %0, %fbWithConstant** %this, align [filtered]
  %x = getelementptr inbounds %fbWithConstant, %fbWithConstant* %0, i32 0, i32 0
  %const = getelementptr inbounds %fbWithConstant, %fbWithConstant* %0, i32 0, i32 1
  store i16 2, i16* %x, align [filtered]
  ret void
}
